add docker in file